discussion/kv_engine/176364/176364_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-30 09:27:54.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-30 10:04:41.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47208/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(1538): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47208/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18441/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54: error: extraneous ")" before ";" [clang-diagnostic-error]
    wait_for_stat_to_be(h, "ep_max_size", 7000000000));
                                                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18441/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: extraneous ")" before ";" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8213/ : FAILURE

Compile error at [2022-06-30T09:36:33.908Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8114/ : FAILURE

Compile error at [2022-06-30T09:46:39.181Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20326/ : FAILURE

Compile error at [2022-06-30T09:58:18.351Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19546/ : FAILURE

Compile error at [2022-06-30T09:37:57.332Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19546/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20671/ : FAILURE

Compile error at [2022-06-30T09:56:55.266Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20671/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21312/ : FAILURE

Compile error at [2022-06-30T10:00:04.307Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28704/ : FAILURE

Compile error at [2022-06-30T10:04:13.674Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1538:54:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28704/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17592/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39657/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
